Update First kNN Exercise - Hazrul Nizam Sidek.ipynb

--- a/First kNN Exercise - Hazrul Nizam Sidek.ipynb
+++ b/First kNN Exercise - Hazrul Nizam Sidek.ipynb
@@ -160,7 +160,7 @@
     "   The authors used the WEKA machine learning tool to first apply four (4) different feature reduction methods on the dataset - namely Correlation-based Feature Selection (CFS), Information Gain (IG), Gain Ratio (GR) and Feature-Vitality Based Reduction Method (FVBRM) to reduce the number of features that will be used. Then the Naive Bayes classifier is applied to the different reduced datasets, and the effectiveness of classifier is the compared between each reduced dataset.  \n",
     "\n",
     "  \n",
-    "2. **Cho, Yoon Ho, Jae Kyeong Kim, and Soung Hie Kim. \"A personalized recommender system based on web usage mining and decision tree induction.\" Expert systems with Applications 23.3 (2002): 329-342.**  \n",
+    "**2. Cho, Yoon Ho, Jae Kyeong Kim, and Soung Hie Kim. \"A personalized recommender system based on web usage mining and decision tree induction.\" Expert systems with Applications 23.3 (2002): 329-342.**  \n",
     "   In this paper, the authors are trying to solve the problem of making product recommendations to customers (recommender system).  \n",
     "   The data used is a combination of the customers clickstream through the marketplace website (web usage mining) and product and purchase data from data marts.  \n",
     "   The authors developed a system comprising of eight agents and one data mart. The decision tree algorithm are used by several of the agents as part of the overall complicated recommender algorithm.\n",
